--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html ng-app="simonhalesVisual">
   <head>
     <meta charset="utf-8">
-    <title>simonhalesVisual</title>
+    <title>Simon Hales | Front end Developer & Web Designer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!--<link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>-->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300' rel='stylesheet' type='text/css'>-->
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/fontello.css"/>
 
